--- a/Lab01/index.html
+++ b/Lab01/index.html
@@ -4,6 +4,6 @@
 		<title> SET08101 - Web Tech </title>
 	</head>
 	<body>
-		<h1> Hello Web Tech </h1>
+		<h1 align='center'> <FONT COLOR ="#44eeff">Hello</FONT> <FONT COLOR ="#ff44fc">Web</FONT> <FONT COLOR ="#44ff5e">Tech</FONT> </h1>
 	</body>
 </html>
