--- a/Lab01/index.html
+++ b/Lab01/index.html
@@ -4,6 +4,7 @@
 		<title> SET08101 - Web Tech </title>
 	</head>
 	<body>
-		<h1 align='center'> <FONT COLOR ="#44eeff">Hello</FONT> <FONT COLOR ="#ff44fc">Web</FONT> <FONT COLOR ="#44ff5e">Tech</FONT> </h1>
+		<BODY BACKGROUND= "https://media1.giphy.com/media/XreQmk7ETCak0/giphy.gif">
+		<h1 align='center'> <FONT COLOR ="#44eeff" style="font-size:500%;">Hello</FONT> <FONT COLOR ="#ff44fc" style="font-size:600%;">Web</FONT> <FONT COLOR ="#44ff5e" style="font-size:500%;">Tech</FONT> </h1>
 	</body>
 </html>
